Fix: Deprecated API usage of URL