@@ -1,6 +1,7 @@
 package net.skullian.skyfactions.paper.npc.factory;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 
@@ -73,10 +74,8 @@ public class ZNPCsPlusFactory implements SkyNPCFactory, Listener {
 
     private static boolean isValidURL(String url) {
         try {
-            new URL(url).toURI();
+            new URI(url);
             return true;
-        } catch (MalformedURLException e) {
-            return false;
         } catch (URISyntaxException e) {
             return false;
         }
